--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>Meu nome é <strong>Niccolas Furigo</strong>, estudo HTML5 e CSS3, programo em Java e Python, faço curso de Analise e Desenvolvimento de Sistemas.</p>
     <h2>Como falar comigo?</h2>
     <ul>
-        <li><a href="https://github.com/NiccolasFurigo" target="_blanck" type="nofollow"> Meu GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/niccolas-furigo-124ba5206/" target="_blanck" type="nofollow">Minha página no Linkedin</a></li>
+        <li><img src="imagem/icone-github.png" alt="logo github"><a href="https://github.com/NiccolasFurigo" target="_blanck" type="nofollow"> /NiccolasFurigo</a> - Acesse meu repositório público no GitHub</li>
+        <li><img src="imagem/icone-linkedin.png" alt="logo linkedin"><a href="https://www.linkedin.com/in/niccolas-furigo-124ba5206/" target="_blanck" type="nofollow">/niccolas-furigo</a> - Me adicione lá no LinkedIn</li>
     </ul>
 </body>
 </html>
